# codecrafters-dns-server-haskell

./: .gitignore  README.md  hs-dns-server.cabal  run_test.sh  test_cases.json  your_server.sh
app/: Main.hs
