cabal-version: 1.12
name:          hs-dns-server
version:       0.1.0.0
license:       BSD3
build-type:    Simple

executable hs-dns-server-exe
  main-is:          Main.hs
  other-modules:    Paths_hs_dns_server
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      attoparsec
    , base                  >=4.7 && <5
    , binary
    , bytestring
    , containers
    , cryptonite
    , directory
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , HUnit
    , memory
    , mmap
    , mtl
    , optparse-applicative
    , simple-sql-parser
    , text
    , time
    , vector
    , word8
    , zlib

  default-language: GHC2021
